# RS-Flip

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  compile_flags.txt  dockertest.sh  fetch_submodules.sh  run_fuzzing_container.sh
fuzzing_testcases/: calc_flip_1  calc_flip_2  cancel_flip  filter_flips_1  filter_flips_2  finish_flip  flip_tips_count  flip_tips_ge_inspector  flip_tips_mixed  flip_tips_rng  flip_tips_threshold  list_flips  stats_2  update_flip
include/: AvgStat.hpp  DB.hpp  Dailygoal.hpp  FilePaths.hpp  FlipUtils.hpp  Flips.hpp  GuiVars.hpp  Margin.hpp  Optimize_v2.hpp  Random.hpp  Recommendations.hpp  Stats.hpp  Tab.hpp  Table.hpp  Types.hpp  Utils.hpp  pch.hpp
src/: avgstat.cpp  dailygoal.cpp  db.cpp  flips.cpp  fliputils.cpp  gui_main.cpp  main.cpp  margin.cpp  optimize_v2.cpp  random.cpp  recommendations.cpp  stats.cpp  table.cpp  unit_test.cpp  utils.cpp
src/flip/: avgstat.cpp  flips.cpp  fliputils.cpp  margin.cpp  stats.cpp
src/gui/: guivars.cpp  tab.cpp
